Use raw-loader to avoid issues with EJS * update webpack config to use raw-loader * add workspace config * override default padding for <p> * usual whitespace stuff

--- a/css/local-override.css
+++ b/css/local-override.css
@@ -2,3 +2,14 @@
 .override-input {
   color: rgba(0, 0, 0, 0.8) !important;
 }
+
+.field-label {
+  color: rgba(0, 0, 0, 0.42);
+  font-size: 0.8rem;
+}
+
+p {
+  display: block;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+}
